# clap-sys

./: CHANGELOG.md  Cargo.toml
src/: audio_buffer.rs  entry.rs  host.rs  lib.rs  plugin.rs  timestamp.rs  universal_plugin_id.rs  version.rs
src/ext/: audio_ports.rs  audio_ports_config.rs  context_menu.rs  event_registry.rs  gui.rs  log.rs  note_name.rs  note_ports.rs  param_indication.rs  params.rs  preset_load.rs  remote_controls.rs  state_context.rs  track_info.rs
src/ext/draft/: extensible_audio_ports.rs  resource_directory.rs  transport_control.rs  triggers.rs  tuning.rs  undo.rs
src/factory/: plugin_factory.rs  preset_discovery.rs
src/factory/draft/: plugin_invalidation.rs  plugin_state_converter.rs
